--- a/Did I/res/layout/fragment_habits.xml
+++ b/Did I/res/layout/fragment_habits.xml
@@ -8,7 +8,7 @@
     <!-- Indicator layout -->
 
     <include
-        android:layout_weight="2"
+        android:layout_weight="1"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="@dimen/indicator_margin_top"
@@ -19,7 +19,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="8"
+        android:layout_weight="9"
         android:orientation="vertical" >
 
         <TextView
@@ -34,6 +34,7 @@
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
         <android.support.v4.view.ViewPager
+            android:layout_marginTop="20dp"
             android:id="@+id/view_pager"
             android:layout_width="match_parent"
             android:layout_height="match_parent" >
