--- a/Did I/res/menu/edit.xml
+++ b/Did I/res/menu/edit.xml
@@ -3,7 +3,7 @@
 
     <item
         android:id="@+id/menu_new"
-        android:icon="@drawable/ic_menu_add"
+        android:icon="@drawable/ic_new"
         android:orderInCategory="0"
         android:showAsAction="always"
         android:title="@string/menu_new"/>
