--- a/Did I/res/menu/main.xml
+++ b/Did I/res/menu/main.xml
@@ -2,7 +2,7 @@
     
     <item android:id="@+id/menu_settings"
         android:title="@string/menu_settings"
-        android:icon="@drawable/ic_action_settings"
+        android:icon="@drawable/ic_edit"
         android:orderInCategory="0"
         android:showAsAction="always" />
     
