--- a/Did I/res/values-large/dimens.xml
+++ b/Did I/res/values-large/dimens.xml
@@ -3,9 +3,10 @@
     <!-- Genral -->
     <dimen name="item_height">48dp</dimen>
     <dimen name="margin_side">32dp</dimen>
+    <dimen name="margin_from_indicator">40dp</dimen>
     
     <!-- Indicators -->
-    <dimen name="indicator_margin_top">30dp</dimen>
+    <dimen name="indicator_margin_top">50dp</dimen>
     <dimen name="indicator_size">20dp</dimen>
     <dimen name="indicator_spacing">12dp</dimen>
     
