--- a/Did I/res/values/dimens.xml
+++ b/Did I/res/values/dimens.xml
@@ -3,6 +3,7 @@
     <!-- Genral -->
     <dimen name="item_height">48dp</dimen>
     <dimen name="margin_side">16dp</dimen>
+    <dimen name="margin_from_indicator">20dp</dimen>
     
     <!-- Indicators -->
     <dimen name="indicator_margin_top">30dp</dimen>
